# Smart-Charging

./: CMakeLists.txt  LoxoneAPI.cpp  LoxoneAPI.h  README.md  Test.java  package-lock.json  package.json
BMW-API/: Test.cpp  Test.h  api.cpp  api.h  api.js  apiNewVersion.js
LoxoneAPI/: package-lock.json
LoxoneAPI/test/: index.js
Smart-Car API/app/src/main/java/: HttpsRequestMiniserver.java
communicationWithServer/: httpsRequest.cpp  httpsRequest.h
communicationWithServerJAVAVersion/: httpsRequest.js  httpsRequestTestVersion.js
getting-started-java-sdk-copiedVersion/app/: build.gradle
getting-started-java-sdk-copiedVersion/app/src/main/java/: HttpsRequestMiniserver.java  Main.java
getting-started-java-sdk-copiedVersion/tutorial/src/main/java/: Main.java
lxcommunicator/: package-lock.json  package.json
lxcommunicator/test/: index.html
